# ARM11-RISC

./: .gitignore  CMakeLists.txt  README.md
src/: assemble.c  assemble.h  emulate.c  emulate.h
src/assemblerUtilities/: assemblerUtilities.c  assemblerUtilities.h  encodingFunctions.h
src/assemblerUtilities/branch/: branch.c
src/assemblerUtilities/dataProcessing/: comparingMov.c  resultCompute.c
src/assemblerUtilities/dataTransfer/: dataTransfer.c
src/assemblerUtilities/multiply/: multiply.c
src/assemblerUtilities/special/: andeq.c  lsl.c
src/database/: masks.h  messages.h  mnemonics.h
src/emulatorUtilities/: emulatorUtilities.c  emulatorUtilities.h  initialize.c  initialize.h
src/emulatorUtilities/instructions/: branch.c  dataProcessing.c  dataTransfer.c  emulatorInstructions.h  finish.c  multiply.c
src/tableUtilities/: symbolTable.c  symbolTable.h
